<resources>
    <string name="app_name">GGEasy-LOL</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="sotec_media">ggeasylol.com</string>
    <string name="summoner_name">Summoner Name</string>
    <string name="region">Region</string>
    <string name="save_summoner">Save Summoner</string>
    <string name="champions">Champions</string>
    <string name="search">Search...</string>
    <string name="stats">Stats</string>
    <string name="skils">Skills</string>
    <string name="skins">Skins</string>
    <string name="current_match">Current Match</string>
    <string name="get_data">Get Data</string>
    <string name="join_lottery">Join Lottery</string>
    <string name="lotteries">Lotteries</string>
    <string name="armor">Armor:</string>
    <string name="attack">Attack:</string>
    <string name="atack_range">Attack Range:</string>
    <string name="health">Health:</string>
    <string name="health_regen">Health Regen:</string>
    <string name="movement_speed">Movement Speed:</string>
    <string name="mana">Mana:</string>
    <string name="mana_regen">Mana Regen:</string>
    <string name="magic_resistance">Magic Resistance:</string>
    <string name="defence">Defense:</string>
    <string name="magic_power">Magic Power:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="summoner">Summoner</string>
    <string name="weekly_rotation">Weekly Rotation</string>
    <string name="language">EUW</string>
    <string name="point">Points</string>
    <string name="classic">Classic</string>
    <string name="continues">Continues...</string>
    <string name="drawing">Drawing...</string>
    <string name="its_over">It\'s Over</string>
    <string name="set_summoner_name">Set Summoner Name</string>
    <string name="please_wait">Please Wait...</string>
    <string name="loading">Loading</string>
    <string name="check_summoner_name_or_region">Check Summoner Name or Region</string>
    <string name="ops_make_mistake">Oops... Something went wrong</string>
    <string name="summoner_isnt_play_game">Summoner Isn\'t Play Game</string>
    <string name="end_date">"End Date : "</string>
    <string name="winners_on_facebook">Winners on Facebook</string>
    <string name="try_again">Try Again</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="comunicate">Communicate</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="sing_up_gg_easy">Sign Up for GGEasy-LOL</string>
    <string name="giris_yapmadan">Skip</string>
    <string name="email_veya_sifre_hatali">Wrong E-Mail or Password</string>
    <string name="hosgeldiniz">Wellcome</string>
    <string name="send_mail">Send Mail</string>
    <string name="re_password">Re-New Password</string>
    <string name="create_page">*Please create a mastery page which named like this in your account and click REGISTER!</string>
    <string name="register">Register</string>
    <string name="passwords_not_same">Passwords aren\'t Same</string>
    <string name="fill_in_all">Fill in All Fields</string>
    <string name="registration">Registration Successful</string>
    <string name="registred">This Summoner Name Has Been Registered Before.</string>
    <string name="used_before">This Mail Address Has Been Used Before.</string>
    <string name="create_page_mistake">Create Mastery Page Like</string>
    <string name="missions">Missions</string>
    <string name="profile">Profile</string>
    <string name="rank">Rank</string>
    <string name="pentakill">Penta Kill</string>
    <string name="quadra">Quadra Kill</string>
    <string name="triple">Triple Kill</string>
    <string name="doublekill">Double Kill</string>
    <string name="ten_kill">+10 Kill</string>
    <string name="twelve_kill">+20 Kill</string>
    <string name="thirty_kill">+30 Kill</string>
    <string name="ten_asist">+10 Assists</string>
    <string name="twelve_asist">+20 Assists</string>
    <string name="thirty_asist">+30 Assists</string>
    <string name="two_tower">+2 Turrets</string>
    <string name="four_tower">+4 Turrets</string>
    <string name="six_tower">+6 Turrets</string>
    <string name="hundred_minion">+100 Minions</string>
    <string name="hundredfifty_minion">+150 Minions</string>
    <string name="twohundred_minion">+200 Minions</string>
    <string name="end_of_match">Match Report</string>
    <string name="variable">Variable x</string>
    <string name="penta_exp">Get Pentakill in Ranked Match.</string>
    <string name="quadra_exp">Get Quadra Kill in Ranked Match.</string>
    <string name="triple_exp">Get Triple Kill in Ranked Match.</string>
    <string name="doubl_exp">Get Double Kill in Ranked Match.</string>
    <string name="ten_asis_exp">Get 10 Assists or More Than in Ranked Match.</string>
    <string name="twenty_asist_exp">Get 20 Assists or More Than in Ranked Match.</string>
    <string name="thirty_asist_exp">Get 30 Assists or More Than in Ranked Match.</string>
    <string name="two_tower_exp">Destroy 2 Turrets or More Than in Ranked Match.</string>
    <string name="four_tower_exp">Destroy 4 Turrets or More Than in Ranked Match.</string>
    <string name="six_tower_exp">Destroy 6 Turrets or More Than in Ranked Match.</string>
    <string name="ten_kill_exp">Get 10 Kills or More Than in Ranked Match.</string>
    <string name="twenty_kill_exp">Get 20 Kills or More Than in Ranked Match.</string>
    <string name="thirty_kill_exp">Get 30 Kills or More Than in Ranked Match.</string>
    <string name="hundred_minion_exp">Kill 100 Minions or More Than in Ranked Match.</string>
    <string name="hundredfifty_minion_exp">Kill 150 Minions or More Than in Ranked Match.</string>
    <string name="twohundred_minion_exp">Kill 200 Minions or More Than in Ranked Match.</string>
    <string name="three_mission">You cannot take more than 3 missions!</string>
    <string name="are_u_sure">Are You Sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="check">Check</string>
    <string name="cancel">Cancel</string>
    <string name="take_mission">Take Mission</string>
    <string name="congratulations">"Congratulations... "</string>
    <string name="earned">Points are Earned.</string>
    <string name="mission_failed">Mission Failed!</string>
    <string name="not_detected">New Match not Detected!</string>
    <string name="change_mail">Change Mail</string>
    <string name="change_pass">Change Password</string>
    <string name="log_out">Log Out</string>
    <string name="send_mail_bug">FeedBack</string>
    <string name="changed_mail">Changed Your E-mail Adress</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_re">Re-New Password</string>
    <string name="new_email">New Email</string>
    <string name="explanation">Minimum 20 characters.</string>
    <string name="subject">Subject</string>
    <string name="error_mission">You aren\'t 30 level in LOL</string>
    <string name="feed_back">Thank You for Feedback</string>
    <string name="message">Please  enter more than 20 characters!</string>
    <string name="change_email_exp">*Please create a mastery page which named like this in your account and click CHANGE button!</string>
    <string name="ok">OK</string>
    <string name="joined_lottery">Joined The Lottery!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="rank_info">*Rank is reset every week and leader of rank user earns 750 Riot Points!</string>
    <string name="competition">Competitions</string>
    <string name="info">*You can get the missions done before the match is over!</string>
    <string name="match">Match</string>
    <string name="personal">Personal</string>
    <string name="team">Team</string>
    <string name="baron">Kill Baron</string>
    <string name="dragon">Kill Dragon</string>
    <string name="inhibitor">Destroy Inhibitors</string>
    <string name="tower">Destroy Turrets</string>
    <string name="first_baron">First Baron</string>
    <string name="first_dragon">First Dragon</string>
    <string name="first_blood">First Blood</string>
    <string name="first_tower">First Turret</string>
    <string name="first_inhibitor">First Inhibitor</string>
    <string name="win">Victory</string>
    <string name="error">Error! Please try again...</string>
    <string name="error_match">No Ranked Match Detected on History</string>
    <string name="kill_baron">Kill 2 Barons or More Than with Team in Ranked Match</string>
    <string name="kill_ejder">Kill 4 Dragons or More Than with Team in Ranked Match</string>
    <string name="destroy_inhi">Destroy 3 Inhibitors or More Than with Team in Ranked Match.</string>
    <string name="destroy_towers">Destroy 7 Turrets or More Than with Team in Ranked Match.</string>
    <string name="first_kill_baron">Kill First Baron with Team in Ranked Match.</string>
    <string name="first_kill_ejder">Kill First Dragon with Team in Ranked Match.</string>
    <string name="firstblood_kill">Get First Blood with Team in Ranked Match.</string>
    <string name="first_turrent">Destroy First Turrets with Team in Ranked Match.</string>
    <string name="first_inhi">Destroy First Inhibitor with Team in Ranked Match.</string>
    <string name="victory_exp">Win a Ranked Match.</string>
    <string name="app_update_text">You don\'t have latest version! Do you want update now?</string>
    <string name="pls_register">Please Sign Up or Sign In on Profile Page!</string>
    <string name="changed_pass">Changed Your Password</string>
    <string name="end_of_match_exp">Each Kills +10, Deaths -10, Assists +6, Victory +100, Defeat -50, Minions 0.5, Turrents +20, Neutral Minions +1.5, Double Kills +50, Triple Kills +150, Quadra Kills +300, Penta Kills +750, Golds +0.05, Damages +0.001 Points in Ranked Match</string>
    <string name="lore">Myth</string>
    <string name="friends">Friends</string>
    <string name="add_friend">Add  Friend</string>
    <string name="notification">Notifications</string>
    <string name="request_sent">Request Sent.</string>
    <string name="before_request">There is a Request Before.</string>
    <string name="no_user">There is no Registered This User in our App.</string>
    <string name="challenge">Challenge</string>
    <string name="waiting">Waiting</string>
    <string name="accepted">Accepted</string>
    <string name="concluded">Concluded</string>
    <string name="accept">Accept</string>
    <string name="victory">Victory</string>
    <string name="defeat">Defeat</string>
    <string name="confront">Confront</string>
    <string name="create_new">Create New</string>
    <string name="language2">en_US</string>
    <string name="select_mission">Select Mission</string>
    <string name="waiting_opponent">Waiting Opponents</string>
    <string name="select_opponent">Select Opponent</string>
    <string name="no_notification">No New Notifications</string>
    <string name="sent_mail_pass">Your password has been sent to your mail address.</string>
    <string name="explanation_item">Explanation</string>
    <string name="necessary">Necessary Items</string>
    <string name="needed_for">Needed for</string>
    <string name="four_skill">4 Skills 1 Passive</string>
    <string name="match_history">Match History</string>
    <string name="Submit">Submit</string>
    <string name="rate_us">Tap a star to rate it on the Google Play.</string>
</resources>