<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context="com.antika.berk.ggeasy.fragment.LoginFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/summoner_name"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/summoner_name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/place_autocomplete_prediction_primary_text_highlight" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/region"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/cast_expanded_controller_progress_text_color"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

</LinearLayout>
