<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.antika.berk.ggeasy.fragment.CurrentMatchFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/current_match"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="normal|bold" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignEnd="@+id/textView"
            android:layout_alignRight="@+id/textView"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/profile" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/menu"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_margin="10dp"
        android:background="@color/secondary_text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_weight="0.28"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/summoner_name"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/summoner_name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/wallet_dim_foreground_disabled_holo_dark" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/region"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/white" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/get_data"
        android:textAllCaps="false"
        android:textColor="@color/cast_expanded_controller_progress_text_color"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

</LinearLayout>
