<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.antika.berk.ggeasy.fragment.ItemOpenFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imageView37"
            android:layout_width="90dp"
            android:layout_height="90dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/cast_expanded_controller_background_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView39"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/gold1" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/cast_intro_overlay_background_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/explanation_item"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:textSize="16sp"
        android:textStyle="bold" />
    <View
    android:layout_height="2dp"
    android:layout_width="fill_parent"
    android:background="@color/secondary_text"
    android:layout_margin="10dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/cast_expanded_controller_background_color"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/necessary"
            android:textColor="@color/cast_expanded_controller_background_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view3"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="@color/secondary_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <GridView
                android:id="@+id/gerekli"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:numColumns="4" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView60"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/needed_for"
            android:textColor="@color/cast_expanded_controller_background_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view2"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="@color/secondary_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <GridView
                android:id="@+id/gelis"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:numColumns="4" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
